--- a/app/src/main/res/layout/activity_book_details.xml
+++ b/app/src/main/res/layout/activity_book_details.xml
@@ -6,13 +6,15 @@
     android:layout_height="match_parent"
     android:background="#ffffe0"
     tools:context=".MainActivity">
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="#FFFFE0"
-        tools:context=".BookDetailsActivity">
+        app:layout_constraintBottom_toTopOf="@+id/nav_view"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -185,7 +187,9 @@
         app:itemIconTint="#FEDC56"
         app:itemTextColor="#FEDC56"
         app:itemActiveIndicatorStyle="@color/black"
+        app:menu="@menu/bottom_menu"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/bottom_menu"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
