--- a/app/src/main/res/layout/book_layout.xml
+++ b/app/src/main/res/layout/book_layout.xml
@@ -29,7 +29,7 @@
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Add Books"
+                    android:text="Add Book"
                     android:textColor="#8B8000"
                     android:textSize="30dp"
                     android:textStyle="bold"
